# Waxwing

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build  test.sh
example/: CMakeLists.txt  main.cc
examples/: CMakeLists.txt  file_io.cc  headers.cc  hello_world.cc  methods.cc  path_parameters.cc
include/server/: io.hh  request.hh  response.hh  result.hh  router.hh  server.hh  types.hh
include/waxwing/: async.hh  dispatcher.hh  http.hh  io.hh  movable_function.hh  request.hh  response.hh  result.hh  router.hh  server.hh  str_split.hh  str_util.hh  types.hh
src/: concurrency.hh  context.c  context.h  file_descriptor.cc  file_descriptor.hh  headers.c  headers.h  http.cc  io.cc  iter.hh  main.c  main.cc  movable_function.hh  request.cc  request.hh  response.cc  response.hh  result.hh  router.c  router.cc  router.h  router.hh  server.c  server.cc  server.h  server.hh  str.c  str.h  str_hashmap.c  str_hashmap.h  str_split.hh  str_util.cc  str_util.hh  thread_pool.cc  thread_pool.hh  types.h  types.hh  vector.c  vector.h
tests/: CMakeLists.txt  dispatcher.cc  result.cc  router.cc  str_utils.cc  thread_pool.cc
